--- a/css/styles.css
+++ b/css/styles.css
@@ -796,7 +796,7 @@ body {
     color: #000;
     text-align: center;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .sort__container {
@@ -1416,7 +1416,7 @@ body {
     background: #FFF;
     color: rgba(0, 0, 0, 0.70);
     font-size: 14px;
-    padding: 10px 440px;
+    padding: 10px 420px;
     width: 100%;
     height: 125px;
     display: flex;
@@ -1424,13 +1424,18 @@ body {
     align-items: flex-start;
 }
 
+.info-about-project__center p {
+    color: #516FA6;
+    font-size: 14px;
+}
+
 .review-card {
     border-radius: 4px;
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
-    padding: 17px 30px;
+    padding: 50px;
     width: 100%;
-    margin: 15px 0;
+    margin: 25px 0 50px;
 }
 
 .review-card h5 {
@@ -1467,7 +1472,6 @@ body {
     color: #000;
     font-size: 18px;
     display: flex;
-    padding: 10px 0;
     width: 90%;
     flex-direction: row;
     justify-content: space-between;
@@ -1506,12 +1510,16 @@ body {
     width: 20px;
 }
 
+.doctor-review-card__photo-name img {
+    border-radius: 50%;
+}
+
 .doctor-review-card__photo-name {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-right: 1px solid #00000019;
-    padding-right: 15px;
+    padding-right: 25px;
 }
 
 .doctor-review-card__name {
@@ -1524,33 +1532,36 @@ body {
 .doctor-review-card__star {
     border-radius: 10px;
     background: rgba(81, 111, 166, 0.80);
-    width: 54px;
+    padding: 0 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 4px 2px;
     margin-right: 10px;
+}
+.doctor-review-card__star img {
+    width: 13px;
 }
 
 .doctor-review-card__star p {
     margin: 0;
     color: #FFF;
     font-size: 12px;
+    padding-left: 5px;
 }
 
 .review-card__date {
     color: rgba(0, 0, 0, 0.70);
     font-size: 14px;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .review-card__shield {
     color: rgba(81, 111, 166, 0.80);
     font-size: 12px;
     text-decoration-line: underline;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .review-card__shield img {
@@ -1560,13 +1571,13 @@ body {
 .review-card__source-review {
     color: rgba(0, 0, 0, 0.70);
     font-size: 14px;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .review-card__date-visit {
     color: rgba(0, 0, 0, 0.70);
     font-size: 14px;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .review-card__center {
@@ -1719,12 +1730,20 @@ body {
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
     padding: 15px;
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.services-hub__block h2 {
+.services-hub__title {
+    display: flex;
+    width: 100%;
+}
+
+.services-hub__title h2 {
     color: #000;
     font-size: 28px;
-    font-weight: 600;
+    font-weight: 500;
     padding-left: 60px;
 }
 
@@ -1776,6 +1795,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 40px 0 15px;
 }
 
 .contact__left {
@@ -1803,8 +1823,9 @@ body {
 .contact__container h2 {
     color: #000;
     font-size: 28px;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
+    margin: 18px 0;
 }
 
 .contact__address {
@@ -1816,6 +1837,7 @@ body {
     color: rgba(0, 0, 0, 0.70);
     font-size: 18px;
     padding: 10px 0;
+    font-weight: 300;
 }
 
 .contact__metro img {
@@ -1826,11 +1848,12 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 5px 0;
 }
 
 .contact__text-about {
     color: rgba(0, 0, 0, 0.80);
-    font-size: 16px;
+    font-size: 13px;
     padding: 10px 0;
 }
 
@@ -1865,7 +1888,11 @@ body {
 .contact__schedule {
     color: rgba(0, 0, 0, 0.70);
     font-size: 16px;
-    padding: 15px 0;
+    font-weight: 400;
+}
+
+.contact__schedule span {
+    font-weight: 500;
 }
 
 .contact__map {
@@ -1876,7 +1903,7 @@ body {
     border-radius: 13px;
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
-    padding: 20px 50px;
+    padding: 30px 50px;
     margin: 20px 0;
 }
 
@@ -1884,6 +1911,7 @@ body {
     color: #000;
     font-size: 24px;
     text-align: center;
+    margin: 10px 0 25px;
 }
 
 .feedback__body {
@@ -1899,6 +1927,19 @@ body {
     flex-wrap: wrap;
 }
 
+.send__btn {
+    padding: 8px 70px;
+    z-index: 5;
+    font-weight: 600;
+    border-radius: 22px;
+    background: rgba(252, 91, 93, 0.80);
+    color: #FFF;
+    text-decoration-line: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .feedback__footer {
     max-width: 834px;
     height: 119px;
@@ -1906,11 +1947,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .feedback__phone-patient input, .feedback__name-patient input, .feedback__sms-patient textarea {
     color: rgba(0, 0, 0, 0.50);
     font-size: 14px;
+    padding: 10px;
 }
 
 .feedback__phone-patient {
@@ -1968,6 +2011,7 @@ body {
 .disease__top-right p {
     color: rgba(0, 0, 0, 0.80);
     font-size: 14px;
+    margin-bottom: 8px;
 }
 
 .disease__top-footer {
@@ -1991,6 +2035,7 @@ body {
 .disease__center-text {
     color: rgba(0, 0, 0, 0.80);
     font-size: 14px;
+    padding: 0 10px;
 }
 
 .disease__center {
@@ -2061,11 +2106,34 @@ body {
     justify-content: space-between;
 }
 
-.disease__review-card__name-patient {
+.disease__review-card__shield img {
+    padding-right: 5px;
+}
+
+.disease__review-card__shield {
+    color: rgba(81, 111, 166, 0.80);
+    font-size: 12px;
+    font-weight: 400;
+    text-decoration-line: underline;
+}
+
+.disease__review-card__name-patient p {
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .disease__review-card__name-patient span {
     margin: 0 10px;
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.disease__review-card__comment {
+    color: #000;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .disease__review-card__comment p {
@@ -2192,7 +2260,7 @@ body {
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
     display: flex;
-    padding: 20px 15px;
+    padding: 45px 15px;
     margin: 20px 0;
     flex-direction: row;
     justify-content: space-around;
@@ -2201,7 +2269,7 @@ body {
 .doctor-card__doctor-name a {
     color: #000;
     font-size: 28px;
-    font-weight: 600;
+    font-weight: 500;
     text-decoration-line: none;
     padding: 5px 0;
 }
@@ -2236,7 +2304,7 @@ body {
     background: rgba(205, 189, 47, 0.29);
     color: #000;
     font-size: 16px;
-    padding: 5px;
+    padding: 2px;
     margin: 5px 0;
     width: max-content;
 }
@@ -2246,7 +2314,7 @@ body {
     background: rgba(102, 189, 122, 0.40);
     color: #000;
     font-size: 16px;
-    padding: 5px;
+    padding: 2px;
     margin: 5px 0;
     width: max-content;
 }
@@ -2266,7 +2334,7 @@ body {
 }
 
 .photo-doctor img {
-    width: 100%;
+    width: 180px;
 }
 
 .doctor-card__doctor-experience {
@@ -2282,6 +2350,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.view-doctor span {
+    color: rgba(0, 0, 0, 0.40);
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .price-btn {
@@ -2347,25 +2421,28 @@ body {
 
 .doctor-card__doctor-prices {
     color: #000;
-    font-size: 12px;
+    font-size: 16px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    padding: 10px 15px;
 }
 
 .doctor-card__doctor-prices p {
     color: #000;
-    font-size: 12px;
-    font-weight: 600;
-    margin: 5px 10px;
+    font-size: 19px;
+    font-weight: 500;
+    margin: 0 10px;
 }
 
 .doctor-card__doctor-prices span {
     color: #FC5B5D;
-    font-size: 12px;
+    font-size: 16px;
     text-decoration: line-through;
 }
+
+
 
 .doctor-card__geo ul {
     list-style-type: none;
@@ -2381,7 +2458,6 @@ body {
 
 .doctor-card__container {
     margin-bottom: 15px;
-    border-bottom: 1px solid #00000019;
 }
 
 .doctor-card__record-clinic {
@@ -2391,14 +2467,63 @@ body {
     width: 100%;
     height: 46px;
     padding: 10px;
-    margin: 5px 0 15px;
+    margin: 5px 0 8px;
+    font-weight: 500;
+}
+
+.doctor-card__geo-disabled p {
+    color: rgba(0, 0, 0, 0.80);
+    font-size: 16px;
+    font-weight: 500;
+    padding: 5px 10px;
+    margin: 0;
+}
+
+.doctor-card__geo-disabled ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.doctor-card__metro-disabled img {
+    width: 27px;
+    padding: 0 8px;
+}
+
+.doctor-card__metro-disabled {
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 12px;
+}
+
+.choose-clinic {
+    color: rgba(81, 111, 166, 0.80);
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration-line: underline;
 }
 
 .doctor-card__geo p {
     color: rgba(0, 0, 0, 0.80);
     font-size: 16px;
-    font-weight: 600;
-    padding: 0 10px;
+    font-weight: 500;
+    padding: 5px 10px;
+    margin: 0;
+}
+
+.doctor-card__geo {
+    height: 0;
+    overflow: hidden;
+    will-change: height;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.doctor-card__geo img {
+    padding-left: 10px;
 }
 
 .doctor-card__geo a {
@@ -2408,8 +2533,24 @@ body {
     text-decoration-line: none;
 }
 
-.doctor-card__geo img {
-    padding: 0 10px;
+.doctor-card__geo-disabled img {
+    padding-left: 10px;
+}
+
+.doctor-card__geo-disabled a {
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration-line: none;
+}
+
+.doctor-card__record-clinic-fold {
+    width: 100%;
+}
+
+.doctor-card__metro img {
+    width: 28px;
+    padding-right: 10px;
 }
 
 .doctor-card__right {
@@ -2418,10 +2559,22 @@ body {
     align-items: flex-start;
     align-content: flex-start;
     flex-wrap: wrap;
+    max-width: 330px;
+    width: 100%;
 }
 
 .doctor-card__metro {
     padding: 0 10px;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 12px;
+}
+
+.listing {
+    border-top: 1px solid #00000019;
+    padding: 10px 0;
+    margin: 0 80px;
 }
 
 .listing ul {
@@ -2525,15 +2678,14 @@ body {
 
 .appointment__price p {
     color: #000;
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 500;
     margin: 5px 10px;
 }
 
 .appointment__price span {
     color: #FC5B5D;
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 14px;
     text-decoration: line-through;
 }
 
@@ -2573,7 +2725,7 @@ body {
 
 .appointment-record-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: row;
     margin: 12px 0;
 }
@@ -2645,6 +2797,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     text-decoration-line: none;
+    padding-left: 10px;
 }
 
 .appointment-body {
@@ -2678,6 +2831,7 @@ body {
     border-radius: 4px;
     background: #FFF;
     padding: 5px 30px;
+    margin-top: 25px;
 }
 
 
@@ -3107,12 +3261,7 @@ body {
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
     padding: 20px;
-}
-
-.users__title a {
-    color: rgba(0, 0, 0, 0.70);
-    font-size: 14px;
-    text-decoration-line: underline;
+    margin-bottom: 25px;
 }
 
 .users__tab-text-positive {
@@ -3120,8 +3269,9 @@ body {
     background: rgba(148, 209, 162, 0.30);
     display: flex;
     flex-direction: row;
-    padding: 0 20px;
+    padding: 0 35px;
     align-items: center;
+    margin: 0 5px;
 }
 
 .users__tab-text-negative {
@@ -3129,7 +3279,7 @@ body {
     background: rgba(235, 110, 110, 0.30);
     display: flex;
     flex-direction: row;
-    padding: 0 20px;
+    padding: 0 35px;
     align-items: center;
 }
 
@@ -3169,16 +3319,7 @@ body {
 }
 
 .review-card__marks-negative {
-    border-radius: 4px;
     background: rgba(252, 91, 93, 0.80);
-    width: 54px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 4px 2px;
-    margin: 0;
 }
 
 .user__positive p, .user__block p, .user__answer-place, .user__answer-date, .user__answer-content {
@@ -3195,19 +3336,33 @@ body {
 }
 
 .user__author-name {
-    padding-right: 10px;
+    padding-right: 25px;
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0;
 }
 
 .user__answer {
     display: flex;
     padding-left: 50px;
-    margin-left: 40px;
+    margin: 15px 0 0 40px;
 }
 
 .user__social {
     padding: 15px 0;
     color: rgba(0, 0, 0, 0.70);
     font-size: 14px;
+}
+
+.user__block span {
+    color: #000;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.user__positive p, .user__block p {
+    margin: 7px 0 10px;
 }
 
 .user__blocks {
@@ -3235,6 +3390,10 @@ body {
     color: rgba(81, 111, 166, 0.80);
     font-size: 12px;
     text-decoration-line: underline;
+}
+
+.user__status img {
+    padding-right: 7px;
 }
 
 .user__info {
@@ -3285,10 +3444,10 @@ body {
 }
 
 .users__side-link {
-    margin-top: 15px;
     text-align: center;
-    font-size: 0.875rem;
-    line-height: 143%;
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    text-decoration-line: underline;
 }
 
 .users__tabcontent {
@@ -3327,10 +3486,18 @@ body {
 
 .users__title {
     display: flex;
+    align-items: center;
+}
+
+.users__title h2 {
+    color: rgba(0, 0, 0, 0.80);
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0;
 }
 
 .users__tab {
-    padding: 11px;
+    padding: 11px 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -3382,7 +3549,7 @@ body {
 }
 
 .record__btn {
-    padding: 5px 50px;
+    padding: 10px 60px;
     z-index: 5;
     border-radius: 22px;
     background: rgba(252, 91, 93, 0.80);
@@ -3391,6 +3558,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 
@@ -3699,7 +3868,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-top: 15px;
+    padding-top: 7px;
 }
 
 .doctor-card__time {
@@ -3816,7 +3985,7 @@ body {
     text-decoration-line: none;
     color: rgba(0, 0, 0, 0.70);
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     border-radius: 22px;
     border: 1px solid #FD7C7D;
     padding: 8px 15px;
@@ -3832,7 +4001,7 @@ body {
     text-decoration-line: none;
     color: rgba(0, 0, 0, 0.70);
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     border-radius: 22px;
     border: 1px solid rgba(0, 0, 0, 0.20);
     padding: 8px 15px;
@@ -3941,7 +4110,24 @@ body {
 }
 
 .popular-doctor__title {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+.popular-doctor__title h4 {
+    border-bottom: 1px solid #00000019;
+    width: 350px;
+    color: #000;
+    font-size: 14px;
+    font-weight: 400;
     text-align: center;
+    padding-bottom: 10px;
+}
+
+.btn-more {
+    display: flex;
+    align-items: center;
 }
 
 .popular-doctor {
