--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,19 @@ body {
     border: 1px solid #00000033;
 }
 
+.search-doctor-view img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.search-doctor-view {
+    margin: 10px;
+    padding: 8px;
+    border-radius: 5px;
+    width: 325px;
+    border: 1px solid #00000033;
+}
+
 .search__city-metro {
     margin: 10px;
     padding: 10px;
@@ -2365,19 +2378,24 @@ body {
 }
 
 .view-doctor {
-    text-align: center;
-    max-width: 200px;
+    height: max-content;
     width: 100%;
-    background: #F6F6F6;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 9px;
+    background: #F6F6F6;
+}
+
+.card-doctor-view img {
+    width: 200px;
 }
 
 .view-doctor span {
     color: rgba(0, 0, 0, 0.40);
     font-size: 14px;
     font-weight: 400;
+    padding-bottom: 15px;
 }
 
 .price-btn {
