--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -704,7 +704,7 @@ html, body {
     justify-content: space-between;
 }
 
-.category__container h5 {
+.category__container h1 {
     color: #000;
     text-align: center;
     font-size: 20px;
@@ -864,6 +864,13 @@ html, body {
 }
 
 .clinic-card__name a {
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+    text-decoration-line: none;
+}
+
+.clinic-card__name h1 {
     color: #000;
     font-size: 20px;
     font-weight: 500;
@@ -1085,6 +1092,7 @@ html, body {
 .clinic-card__phone {
     display: flex;
     flex-direction: row;
+    margin: 5px 0 20px;
 }
 
 .clinic-card__phone img {
@@ -1113,12 +1121,11 @@ html, body {
     text-decoration-line: none;
 }
 
-.clinic-card__phone {
+.clinic-card__phone a {
     color: #516FA6;
     font-size: 20px;
     font-weight: 600;
     text-decoration-line: underline;
-    margin: 5px 0 20px;
 }
 
 .clinic-card__popular-procedure {
@@ -2948,6 +2955,19 @@ html, body {
     border-radius: 13px;
     background: #FFF;
     padding: 15px;
+}
+
+.doctor-card__surname-doctor h1 {
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.doctor-card__name-doctor h1 {
+    color: #000;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 10px;
 }
 
 .doctor-card__surname-doctor {
